--- a/praca/cv.tex
+++ b/praca/cv.tex
@@ -12,9 +12,8 @@
 
 Życiorys.
 \vfill
-Urodziłem się 28 stycznia 1988 w Łodzi. 
 
-Od 2004 roku uczęszczałem do L LO im. Ruy Barbosy w Warszawie. W 2007 roku ukończyłem szkołę średnią. Od lutego 2008 roku podjąłem studia na Wydziale Elektroniki i Technik Informacyjnych Politechniki Warszawskiej na kierunku Informatyka i specjalności Inżynieria Systemów Informatycznych.
+Urodziłem się 28 stycznia 1988 w Łodzi. Od 2004 roku uczęszczałem do L LO im. Ruy Barbosy w Warszawie. W 2007 roku ukończyłem szkołę średnią. Od lutego 2008 roku podjąłem studia na Wydziale Elektroniki i Technik Informacyjnych Politechniki Warszawskiej na kierunku Informatyka i specjalności Inżynieria Systemów Informatycznych.
 
 Po uzyskaniu tytułu inżyniera chcę podjąć studia drugiego stopnia na wydziale Elektroniki i Technik Informacyjnych Politechniki Warszawskiej. W obszarze moich zainteresowań naukowych leżą systemy wbudowane i mikroprocesorowe, programowanie niskopoziomowe i zagadnienia sieciowe. Interesuję się grą na gitarze i motocyklami. Lubię podróżować i uprawiać różne sporty, w tym bieganie. 
 
