--- a/praca/bibliografia.bib
+++ b/praca/bibliografia.bib
@@ -16,6 +16,27 @@
   url={http://standards.ieee.org/getieee802/download/802.11n-2009.pdf},
 }
 
+@misc{pub:VirtualAP,
+	author={Maria Eugenia Berezin and Franck Rousseau and Andrzej Duda},
+	title={\emph{Multichannel Virtual Access Points for Seamless Handoffs in IEEE 802.11 Wireless Networks}},
+	journal={IEEE},
+	year={2011},
+}
+
+@misc{pub:AdvAp,
+        author={Henning Trsek and Stefan Schwalowsky and Bjoern Czybik and  Juergen Jasperneite},
+        title={\emph{Implementation of an advanced IEEE 802.11 WLAN AP for real-time wireless communications}},
+        journal={IEEE},
+        year={2011},
+}
+    
+@misc{pub:SpaceTimeCoding,
+	author={Mohsen Maadani and Seyed Ahmad Motamedi and Mohammad Khayeri},
+	title={\emph{A Cross-Layer Adaptive Space-Time Coding Scheme for IEEE 802.11-Based Soft-Real-Time Wireless Industrial Networks}},
+	journal={IEEE},
+	year={2011},
+}
+
 @misc{pub:DCS,
 	author={Gang Wu and Sathyanarayana Singh and Tzi-cker Chiueh},
 	title={\emph{Implementation of Dynamic Channel Switching on IEEE 802.11-Based Wireless Mesh Networks}},
@@ -74,4 +95,11 @@
 	title={\emph{http://linuxwireless.org/en/users/Documentation/iw}}, 
 	url={http://linuxwireless.org/en/users/Documentation/iw},
 }
+
+@misc{www:ECO-Mob,
+	title={\emph{http://www.eco-mobilnosc.pw.edu.pl/}},
+}
+
+
+
 
