--- a/praca/ch_Target.tex
+++ b/praca/ch_Target.tex
@@ -1,9 +1,10 @@
 % Cel pracy. Open source, systemy cz. rzeczywistego, 802.11.
 
-Celem niniejszej pracy inżynierskiej jest wytworzenie narzędzia pomiarowego \emph{hop-sniffer} umożliwiającego obserwacje wybranych zjawisk zachodzących podczas komunikacji systemów w standardzie 802.11. Główny nacisk kładziony jest na pomiar zależności czasowych między zdarzeniami charakteryzującymi dany scenariusz komunikacyjny. Poprzez zdarzenie rozumiem fakt nadania lub odebrania ramki 802.11. Ramki są podstawowym elementem protokołu komunikacyjnego, więc możliwość obrazowania zależności czasowych między nimi daje szansę  ustalenia trwania dowolnych zjawisk charakteryzujących 802.11.
+Rozwój technologii bezprzewodowych powoduje ciągły wzrost zainteresowania standardem 802.11. Rozwiązania, które wykluczają konieczność użycia drogiego i często niewygodnego okablowania są oczywistym wyborem dla zastosowań przemysłowych, zwłaszcza jeśli w grę wchodzi użycie mobilnych stacji lub agentów. Ze względu na charakterystykę informatycznych systemów przemysłowych, które działają na styku z fizycznymi zjawiskami, często zachodzi konieczność stosowania w nich systemów czasu rzeczywistego. Rozwój systemów operacyjnych realizujących swoje zadania w ograniczonym i deterministycznym czasie stał się również celem środowisk open-source, czego dowodem jest istnienie takich projektów jak RTAI, Xenomai, czy ciągłe udoskonalanie jądra systemu Linux pod kątem redukcji niedeterministycznych opóźnień. 
 
-Skupienie na pomiarze parametrów czasowych wynika z przyświecającego pracy celu analizy zastosowania komunikacji bezprzewodowej w wymianie danych systemów czasu rzeczywistego. Systemy takie w swoim obrębie pracują w sposób deterministyczny i zgodny z przyjętymi założeniami. Problem pojawia się w sytuacji, gdy nadchodzi potrzeba ustanowienia łącza komunikacyjnego między nimi. W celu zachowania założeń opóźnienia wprowadzane przez takie łącze muszą spełniać te same rygorystyczne wymagania co same systemy. Możliwość pomiarów oferowana przez program \emph{hop-sniffer} jest pomocna nie tyle w odpowiedzi na pytanie, czy komunikacja w standardzie 802.11 jest deterministyczna, lecz jakie mogą być przybliżone czasy trwania wybranych zjawisk w ustalonych warunkach medium. 
+Analizując publikacje naukowe z ostatnich lat można dostrzec dużą liczbę prac poruszających kwestię wymiany danych między systemami czasu rzeczywistego w medium bezprzewodowym (przykładowo \cite{pub:AdvAp}, \cite{pub:SpaceTimeCoding}). Dobrym przykładem systemu z agentami mobilnymi jest projekt \emph{ECO-Mobilność} \cite{www:ECO-Mob} wykorzystujący pojazdy \emph{PRT} (ang. \emph{Personal Rapid Transport}). Łączenie tych dwóch technologii wymusza skupienie większej uwagi na parametrach czasowych jakimi charakteryzuje się komunikacja w standardzie 802.11. Uważam, że potrzebne jest rozwiązanie pozwalające na przeprowadzenie pomiarów opóźnień wymiany danych dla scenariuszy posiadających ograniczenia czasowe wynikające z potrzeby utrzymania połączenia \cite{pub:VirtualAP}. 
 
-Z pośród wybranych scenariuszy w komunikacji bezprzewodowej praca ta skupia się głównie na roamingu 802.11 stacji klienckiej i będącym jego integralną częścią zjawisku przełączania kanału radiowego. Zjawisko to jest ważne głownie z perspektywy stacji mobilnych, których interfejsy radiowe, w celu zachowania łączności, są zmuszone do zmian częstotliwości pracy zgodnie z kanałem działania punktu dostępowego obsługującego aktualnie odwiedzany obszar. Sformułowanie sposobu pomiaru czasu trwania roamingu stacji klienckiej posłuży mi do wyznaczenia wymagań stawianych aplikacji \emph{hop-sniffer}. Wymagania te są podstawą do wyboru technik programistycznych, używanych bibliotek i środowiska działania programu.
+Celem niniejszej pracy inżynierskiej jest wytworzenie narzędzia pomiarowego \emph{hop-sniffer} umożliwiającego obserwacje wybranych zjawisk zachodzących podczas komunikacji systemów w standardzie 802.11. Główny nacisk kładziony jest na pomiar zależności czasowych między zdarzeniami charakteryzującymi dany scenariusz komunikacyjny. Poprzez zdarzenie rozumiem fakt nadania lub odebrania ramki 802.11. Ramki są podstawowym elementem protokołu komunikacyjnego, więc możliwość obrazowania zależności czasowych między nimi daje szansę ustalenia trwania dowolnych zjawisk charakteryzujących 802.11.
 
-Ostatecznie niniejsza praca wymaga wykorzystania aplikacji \emph{hop-sniffer} w realizacji uprzednio sformułowanej procedury pomiarowej w celu wyciągnięcia wniosków co do czasu przełączania kanału radiowego podczas roamingu stacji klienckiej w standardzie 802.11. Wnioski dotyczą głównie wpływu zastosowanych ustawień i wybranego środowiska pod kątem możliwego zastosowania w systemach czasu rzeczywistego.
+Z pośród wybranych scenariuszy w komunikacji bezprzewodowej praca ta skupia się głównie na roamingu 802.11 stacji klienckiej i będącym jego integralną częścią zjawisku przełączania kanału radiowego. Zjawisko to jest ważne głownie z perspektywy stacji mobilnych, których interfejsy radiowe, w celu zachowania łączności, są zmuszone do zmian częstotliwości pracy zgodnie z kanałem działania punktu dostępowego obsługującego aktualnie odwiedzany obszar. Z punktu widzenia komunikacji systemów czasu rzeczywistego ważne jest określenie ograniczeń czasowych ze względu na fakt zerwania połączenia agenta z systemem podczas przełączania między punktami dostępowymi. Sformułowanie sposobu pomiaru czasu trwania roamingu stacji klienckiej posłuży mi do wyznaczenia wymagań stawianych aplikacji \emph{hop-sniffer}. Wymagania te są podstawą do wyboru technik programistycznych, używanych bibliotek i środowiska działania programu.
+
