--- a/praca/ch_Sumup.tex
+++ b/praca/ch_Sumup.tex
@@ -1,11 +1,12 @@
 % Podsumowanie
 
-Na podstawie zaprezentowanych wyników pomiarów dokonałem analizy wpływu stanu medium transmisyjnego oraz ustawień interfejsów poszczególnych uczestników pomiaru na zjawisko roamingu stacji klienckiej w standardzie 802.11. Moim dążeniem była identyfikacja głównych czynników będących przyczyną zwiększenia opóźnień. Dobrane parametry różnicujące scenariusze pomiarowe miały za zadanie symulację sytuacji, które może napotkać stacja przemieszczająca się między strefami zasięgu punktów dostępowych.
+Głównym celem było stworzenie narzędzia otwartego na rozwój. Skuteczne przeprowadzenie obserwacji opisywanego zjawiska dowodzi użyteczności zastosowanego podejścia. Ostatecznie implementacji uległa część dotycząca roamingu, ale program oferuje bazę do wdrożenia innych procedur pomiarowych, pod warunkiem, że ich elementarnymi krokami są zdarzenia przesłania ramek standardu 802.11. Uniwersalność rozwiązania może zostać zwiększona dzięki zastosowaniu interfejsu użytkownika do komponowania niezdefiniowanych scenariuszy. Cel ten może zostać łatwo osiągnięty przez wprowadzenie dodatkowej abstrakcji procedury pomiarowej, która sprowadza się do określenia różnicy stempli czasowych wybranych zdarzeń (określanych przez typy ramek i ich zawartość).
 
-Powstała w wyniku pracy aplikacja \emph{hop-sniffer} posiada szerokie możliwości rozwoju. Skuteczna przeprowadzenie obserwacji opisywanego zjawiska dowodzi użyteczności zastosowanego podejścia. Ostatecznie implementacji uległa część dotycząca roamingu, ale program oferuje bazę do wdrożenia innych procedur pomiarowych, pod warunkiem, że ich elementarnymi krokami są zdarzenia przesłania ramek standardu 802.11. Uniwersalność rozwiązania może zostać zwiększona dzięki zastosowaniu interfejsu użytkownika do komponowania niezdefiniowanych scenariuszy. Cel ten może zostać łatwo osiągnięty przez wprowadzenie dodatkowej abstrakcji procedury pomiarowej, która sprowadza się do określenia różnicy stempli czasowych wybranych zdarzeń (określanych przez typy ramek i ich zawartość).Aplikacja ukazuje również sposób podejścia do potrzeby przełączania kanału radiowego w trakcie realizacji scenariusza bez groźby zgubienia ramek potrzebnych do jego kontynuacji. 
+Aplikacja ukazuje sposób podejścia do potrzeby przełączania kanału radiowego w trakcie realizacji scenariusza bez groźby zgubienia ramek potrzebnych do jego kontynuacji. Bardziej efektywnym podejściem byłby wykorzystanie dwóch lub więcej interfejsów radiowych pracujących na różnych częstotliwościach. Wymaganie to można spełnić stosując dostępną w bibliotece \emph{libpcap} możliwość nasłuchiwania na wszystkich dostępnych interfejsach. Wymagałoby to uprzedniego wprowadzenia wybranych interfejsów \emph{monitor} w tryb \emph{promiscuous}, a następnie inicjalizacji nasłuchiwania przy pomocy nazwy interfejsu \emph{any}. Zbędny ruch można odrzucić za pomocą zaimplementowanego już mechanizmu filtra. Rozwiązanie to jest najprostsze i nie wymaga zmian w logice działania aplikacji (kolejności i metodzie przetwarzania pakietu).
 
-Ze względu na dużą ilość czynników wpływających na zakłócenia łącza i czasy komunikacji bardziej przewidywalne byłoby izolowane środowisko pomiarowe. Przykładowo, wszystkie cztery stacje biorące udział w pomiarze mogą znajdować się w ekranowanym opakowaniu, gdzie wymuszenie roamingu odbywałoby się poprzez zdecydowane osłabienie mocy sygnału jednego z punktów dostępowych. Oczywiście pojęcie \emph{stacja} nie musi oznaczać pojedynczego komputera, lecz interfejs karty radiowej zamontowanej na wspólnej maszynie. W takich warunkach wpływ poszczególnych czynników jest łatwiejszy do określenia. 
+Warto zaznaczyć, że program implementowany był z myślą o rozwoju w bardziej złożoną aplikację pomiarową. Z pewnością przydatne byłoby wprowadzenie wszelkich ułatwień dla użytkownika w postaci zwiększenia automatyzacji pomiaru z jednoczesną możliwością określenia sposobu prezentacji wyników oraz łatwy sposób definiowania scenariusza pomiarowego (za pomocą typów ramek i tekstu filtra).
 
+W wyniku działania, w warunkach domowych, program uzyskał ciekawe wyniki. Część scenariuszy sugeruje, że przeprowadzenie pomiaru w warunkach izolowanych od wpływu środowiska zewnętrznego mogłoby pomóc w zebraniu danych wolnych od wartości odstających. Izolacja pozwoliłaby również na bardziej dokładną identyfikację czynników wpływających na zwiększanie opóźnienia roamingu.
 
 
 
