--- a/trunk/praca/bibliografia.bib
+++ b/trunk/praca/bibliografia.bib
@@ -1,67 +1,57 @@
-@misc{std:IEEE80211,
+@BOOK{std:IEEE80211,
   author={IEEE Standards Association},
   title={\emph{IEEE802.11-2007: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) specifications}},
   publisher={IEEE},
   year={2007},
-  isbn={0-7381-5656-6},
-  url={http://standards.ieee.org/getieee802/download/802.11-2007.pdf},
 }
 
-@misc{std:IEEE80211n,
+@BOOK{std:IEEE80211n,
   author={IEEE Standards Association},
   title={\emph{IEEE802.11n-2009: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) specifications}},
   publisher={IEEE},
   year={2009},
-  isbn={978-0-7381-6047-4},
-  url={http://standards.ieee.org/getieee802/download/802.11n-2009.pdf},
 }
 
-@misc{pub:VirtualAP,
+@BOOK{pub:VirtualAP,
 	author={Maria Eugenia Berezin and Franck Rousseau and Andrzej Duda},
 	title={\emph{Multichannel Virtual Access Points for Seamless Handoffs in IEEE 802.11 Wireless Networks}},
-	journal={IEEE},
+	publisher={IEEE},
 	year={2011},
 }
 
-@misc{pub:AdvAp,
+@BOOK{pub:AdvAp,
         author={Henning Trsek and Stefan Schwalowsky and Bjoern Czybik and  Juergen Jasperneite},
         title={\emph{Implementation of an advanced IEEE 802.11 WLAN AP for real-time wireless communications}},
-        journal={IEEE},
+        publisher={IEEE},
         year={2011},
 }
     
-@misc{pub:SpaceTimeCoding,
+@BOOK{pub:SpaceTimeCoding,
 	author={Mohsen Maadani and Seyed Ahmad Motamedi and Mohammad Khayeri},
 	title={\emph{A Cross-Layer Adaptive Space-Time Coding Scheme for IEEE 802.11-Based Soft-Real-Time Wireless Industrial Networks}},
-	journal={IEEE},
+	publisher={IEEE},
 	year={2011},
 }
 
-@misc{pub:DCS,
+@ARTICLE{pub:DCS,
 	author={Gang Wu and Sathyanarayana Singh and Tzi-cker Chiueh},
 	title={\emph{Implementation of Dynamic Channel Switching on IEEE 802.11-Based Wireless Mesh Networks}},
 	journal={WICON'08},
 	year={2008},
 }
 
-@misc{pub:Comparison,
+
+@BOOK{pub:Comparison,
 	author={A.Barbalace and A.Lucheta and G.Manduchi and M.Moro and A.Soppelsa and C.Taliercio},
 	title={\emph{Performance Comparison of VxWorks, Linux, RTAI and Xenomai in a Hard  Real-time Application}},
-	journal={IEEE},
+	publisher={IEEE},
 	year={2007},
 }
 
-@misc{pub:802.11e,
+@ARTICLE{pub:802.11e,
 	author={Gianluca Cena and Lucia Seno and Adiano Valenzano and Claudio Zunino},
 	title={\emph{On the Performance of IEEE 802.11e Wireless Infrastructures for Soft-Real-Time Industrial Applications}},
 	journal={IEEE transactions on industrial informatics, vol. 6, no. 3},
-	year={2010},
-}
-
-@misc{pub:QoS,
-	author={Richard Kelly and Joseph Gasparakis},
-	title={\emph{Common Functionality in the 2.6 Linux Network Stack}},
-	journal={Copyright © 2010 Intel Corporation},
 	year={2010},
 }
 
@@ -69,35 +59,68 @@
 	author={Theodore Ts'o and Darren Hart and John Kacur}, 
 	title={\emph{Real-Time Linux Wiki}}, 
 	year={2008},
-	url={https://rt.wiki.kernel.org/},
+	howpublished={\url{https://rt.wiki.kernel.org/}},
 }
 
 @misc{www:LinuxTCHowto,
 	author={Bert Hubert and Thomas Graf and Gregory Maxwell and Remco van Mook and Martijn van Oosterhout and Paul B Schroeder and Jasper Spaans and Pedro Larroy},
 	title={\emph{Linux Advanced Routing \& Traffic Control HOWTO}}, 
-	url={http://linuxreviews.org/howtos/networking/lartc/},
+	howpublished={\url{http://linuxreviews.org/howtos/networking/lartc/}},
 }
 
 @misc{www:DieMan,
 	author={Linux manual},
-	title={\emph{http://www.die.net/}}, 
-	url={http://www.die.net/},
+	title={die.net}, 
+	howpublished={\url{http://www.die.net/}},
 }
 
 @misc{www:ArchLinux,
-	author={Arch Linux distribution},
-	title={\emph{http://www.archlinux.org/}}, 
-	url={http://www.archlinux.org/},
+	author={Judd Vinet and Aaron Griffin},
+	title={\emph{A simple, lightweight distribution}}, 
+	howpublished={\url{http://www.archlinux.org/}},
 }
 
 @misc{www:IW,
 	author={Johannes Berg},
-	title={\emph{http://linuxwireless.org/en/users/Documentation/iw}}, 
-	url={http://linuxwireless.org/en/users/Documentation/iw},
+	title={\emph{Project iw}}, 
+	howpublished={\url{http://linuxwireless.org/en/users/Documentation/iw}},
+}
+
+@misc{www:LibnlDoc,
+        author={Johannes Berg},
+        title={\emph{libnl documentation}},
+        howpublished={\url{http://linuxwireless.org/en/developers/Documentation/nl80211/kerneldoc}},
+}
+
+@misc{www:IWSrc,
+        author={Johannes Berg},
+        title={\emph{Project iw source}},
+        howpublished={\url{http://linuxwireless.org/download/iw/}},
+}
+
+
+@misc{www:LibPcapDoc,
+        author={Van Jacobson and Craig Leres and Steven McCanne},
+        title={\emph{libpcap documentation}},
+        howpublished={\url{http://www.tcpdump.org/pcap3_man.html}},
+}
+
+@misc{www:TcpDumpSrc,
+        author={Van Jacobson and Craig Leres and Steven McCanne},
+        title={\emph{tcpdump source}},
+        howpublished={\url{http://www.tcpdump.org/#source}},
 }
 
 @misc{www:ECO-Mob,
-	title={\emph{http://www.eco-mobilnosc.pw.edu.pl/}},
+        author={\emph{Kierownik Projektu:} Prof. nzw. dr hab. inż. Włodzimierz Choromański},
+        title={\emph{Projekt ECO-Mobilność}},
+	howpublished={\url{http://www.eco-mobilnosc.pw.edu.pl/}},
+}
+
+@misc{www:Radiotap,
+        author={Open-source \emph{wiki}},
+        title={\emph{Radiotap Wiki}},
+        howpublished={\url{http://www.radiotap.org/}},
 }
 
 
