--- a/trunk/praca/praca.tex
+++ b/trunk/praca/praca.tex
@@ -10,6 +10,7 @@
 \usepackage{booktabs}
 \usepackage{array}
 
+\usepackage{rotating}
 \usepackage{amsmath}
 \usepackage{color}
 \usepackage{listings}
@@ -77,7 +78,7 @@
 \chapter{Cel pracy.}
 \input{ch_Target}
 
-\chapter{Wprowadzenie do dziedziny.}
+\chapter{Standard \emph{802.11} i systemy czasu rzeczywistego.}
 \input{ch_Introduction}
 
 \chapter{Pomiar czasu przełączania kanału radiowego.}
